[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/font/PublicSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://World/Battle/GameOver/ScoreItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Battle/GameOver/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=2]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -220.0
margin_top = 16.0
margin_right = 220.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Battle Over"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -216.0
margin_right = 196.0
margin_bottom = 224.0

[node name="ScoreList" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 392.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="WinnerItem" parent="Panel/ScrollContainer/ScoreList" instance=ExtResource( 2 )]
margin_right = 392.0

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer/ScoreList"]
margin_top = 40.0
margin_right = 392.0
margin_bottom = 44.0

[node name="Timer" type="Timer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 288.0
margin_top = 600.0
margin_right = 760.0
margin_bottom = 672.0
custom_constants/separation = 25

[node name="MainMenu" type="Button" parent="HBoxContainer"]
margin_right = 140.0
margin_bottom = 72.0
size_flags_horizontal = 3
group = SubResource( 2 )
text = "Main Menu"

[node name="RestartBattle" type="Button" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 306.0
margin_bottom = 72.0
size_flags_horizontal = 3
group = SubResource( 2 )
text = "Restart Battle"

[node name="CharacterSelect" type="Button" parent="HBoxContainer"]
margin_left = 331.0
margin_right = 472.0
margin_bottom = 72.0
size_flags_horizontal = 3
group = SubResource( 2 )
text = "Character Select"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/RestartBattle" to="." method="_on_RestartBattle_pressed"]
[connection signal="pressed" from="HBoxContainer/CharacterSelect" to="." method="_on_CharacterSelect_pressed"]
